1.重构代码 2.对应bug